[gd_scene load_steps=8 format=3 uid="uid://t5rv7q8ukafw"]

[ext_resource type="Script" path="res://Assets/Scripts/GameModes/VS-Manager.gd" id="1_bsefa"]
[ext_resource type="PackedScene" uid="uid://cdmuarr6mdqy2" path="res://Prefabs/MainBoard.tscn" id="2_dl0q3"]
[ext_resource type="AnimationLibrary" uid="uid://cadj7bbsvu750" path="res://Assets/Animations/Boards.res" id="3_h102w"]
[ext_resource type="FontFile" uid="uid://nja5ecqggsmn" path="res://Assets/Fonts/Spectrashell.otf" id="4_7gkcp"]
[ext_resource type="Texture2D" uid="uid://vvq3nfcryfj8" path="res://Assets/Sprites/BGNs/tetrio-coverart-alt.png" id="5_sqpe2"]

[sub_resource type="Animation" id="Animation_nu1ek"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Board:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [-150.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Board:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [-300.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Board:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Board:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Board:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yrgys"]
_data = {
"RESET": SubResource("Animation_nu1ek")
}

[node name="MainGame" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bsefa")

[node name="Boards" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="Player1" type="Control" parent="Boards"]
layout_mode = 2
size_flags_horizontal = 6

[node name="Board" parent="Boards/Player1" instance=ExtResource("2_dl0q3")]
layout_mode = 1

[node name="Animator" type="AnimationPlayer" parent="Boards/Player1"]
libraries = {
"": SubResource("AnimationLibrary_yrgys"),
"Boards": ExtResource("3_h102w")
}

[node name="Player2" type="Control" parent="Boards"]
layout_mode = 2
size_flags_horizontal = 6

[node name="Board" parent="Boards/Player2" instance=ExtResource("2_dl0q3")]
layout_mode = 1
isPlayerOne = false

[node name="Board" parent="Boards/Player2/Board" instance=ExtResource("2_dl0q3")]
layout_mode = 1
isPlayerOne = false

[node name="Animator" type="AnimationPlayer" parent="Boards/Player2"]
libraries = {
"": SubResource("AnimationLibrary_yrgys"),
"Boards": ExtResource("3_h102w")
}

[node name="Label2" type="Label" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -49.0
offset_right = 307.0
grow_vertical = 0
theme_override_fonts/font = ExtResource("4_7gkcp")
theme_override_font_sizes/font_size = 30
text = "v0.0.2"
vertical_alignment = 2

[node name="TextureRect" type="TextureRect" parent="."]
z_index = -100
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_sqpe2")
expand_mode = 2
stretch_mode = 3

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -307.0
offset_top = -49.0
grow_horizontal = 0
grow_vertical = 0
theme_override_fonts/font = ExtResource("4_7gkcp")
theme_override_font_sizes/font_size = 30
text = "ALL ASSETS ARE PLACEHOLDERS.
THEY WILL BE CHANGED IN THE FUTURE"
horizontal_alignment = 2
vertical_alignment = 2

[connection signal="Attack" from="Boards/Player1/Board" to="Boards/Player1/Board/DisplayInfo" method="Attack"]
[connection signal="Attack" from="Boards/Player1/Board" to="Boards/Player2/Board" method="ReceiveAttack"]
[connection signal="TopedOut" from="Boards/Player1/Board" to="." method="PlayerOneDead"]
[connection signal="TopedOut" from="Boards/Player1/Board" to="Boards/Player2/Board" method="StopGame"]
[connection signal="Attack" from="Boards/Player2/Board" to="Boards/Player1/Board" method="ReceiveAttack"]
[connection signal="Attack" from="Boards/Player2/Board" to="Boards/Player2/Board/DisplayInfo" method="Attack"]
[connection signal="TopedOut" from="Boards/Player2/Board" to="." method="PlayerTwoDead"]
[connection signal="TopedOut" from="Boards/Player2/Board" to="Boards/Player1/Board" method="StopGame"]
[connection signal="Attack" from="Boards/Player2/Board/Board" to="Boards/Player1/Board" method="ReceiveAttack"]
[connection signal="Attack" from="Boards/Player2/Board/Board" to="Boards/Player2/Board/Board/DisplayInfo" method="Attack"]
[connection signal="TopedOut" from="Boards/Player2/Board/Board" to="." method="PlayerTwoDead"]
[connection signal="TopedOut" from="Boards/Player2/Board/Board" to="Boards/Player1/Board" method="StopGame"]
